[gd_scene load_steps=11 format=3 uid="uid://wkm6jgcm5mys"]

[ext_resource type="Script" uid="uid://ddtw01iqjw1hk" path="res://Interface/external_inventory.gd" id="1_j51ov"]
[ext_resource type="StyleBox" uid="uid://cu8wrnw314hjl" path="res://Interface/InventoryPanelStyle.tres" id="2_uwpdy"]
[ext_resource type="PackedScene" uid="uid://d3yl41a7rncgb" path="res://Interface/inventory_slot_ui.tscn" id="3_3bb5i"]
[ext_resource type="Script" uid="uid://bi8gfy8qlexw5" path="res://Interface/item_context_ui.gd" id="4_5nhhn"]
[ext_resource type="Texture2D" uid="uid://bif3lbyihceg0" path="res://Interface/TestStuff/test_item_spritesheet.png" id="5_bqvh6"]
[ext_resource type="Script" uid="uid://coyexc2fjsnd0" path="res://Interface/split_stack_ui.gd" id="6_hiijg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pjc3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjc3g"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.18431373, 0.17254902, 0.13725491, 0.5411765)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3y5k6"]
atlas = ExtResource("5_bqvh6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xywkj"]
bg_color = Color(0.18431373, 0.17254902, 0.13725491, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[node name="ExternalInventory" type="PanelContainer"]
custom_minimum_size = Vector2(304, 0)
offset_left = 16.0
offset_top = 225.0
offset_right = 572.0
offset_bottom = 418.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pjc3g")
script = ExtResource("1_j51ov")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ExternalNameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.49803922)
theme_override_font_sizes/font_size = 20
text = "CONTAINER"
horizontal_alignment = 1

[node name="SlotsPanel" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_uwpdy")

[node name="ExternalSlotContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/SlotsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 4

[node name="InventorySlotUI" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI2" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI3" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI4" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI5" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI6" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI7" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI8" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI9" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI10" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI11" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="InventorySlotUI12" parent="HBoxContainer/VBoxContainer/SlotsPanel/ExternalSlotContainer" instance=ExtResource("3_3bb5i")]
layout_mode = 2

[node name="ExternalItemContextUI" type="PanelContainer" parent="HBoxContainer" node_paths=PackedStringArray("item_name", "item_descript", "item_flavor_text", "trash_button", "use_button", "split_button")]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_pjc3g")
script = ExtResource("4_5nhhn")
item_name = NodePath("MarginContainer/VBoxContainer/ItemName")
item_descript = NodePath("MarginContainer/VBoxContainer/ItemDescript")
item_flavor_text = NodePath("MarginContainer/VBoxContainer/ItemFlavorText")
trash_button = NodePath("MarginContainer/VBoxContainer/ButtonContainer/TrashButton")
use_button = NodePath("MarginContainer/VBoxContainer/ButtonContainer/UseButton")
split_button = NodePath("MarginContainer/VBoxContainer/ButtonContainer/SplitButton")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ExternalItemContextUI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ExternalItemContextUI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ItemName" type="Label" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45080644, 0.603062, 0.86143565, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.54509807)
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 20
text = "ItemName"
horizontal_alignment = 1

[node name="ItemDescript" type="RichTextLabel" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4392157)
bbcode_enabled = true
text = "[center]This is the [color=gold] item [/color] description"
fit_content = true

[node name="ItemFlavorText" type="RichTextLabel" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2784314)
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
bbcode_enabled = true
text = "[i]This is some lore description to add flavor text to a description"
fit_content = true

[node name="ItemValue" type="Label" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TrashButton" type="Button" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
mouse_filter = 1
text = "TRASH"

[node name="UseButton" type="Button" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
mouse_filter = 1
text = "USE"

[node name="SplitButton" type="Button" parent="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
mouse_filter = 1
text = "SPLIT"

[node name="HideDetailsButton" type="TextureButton" parent="HBoxContainer/ExternalItemContextUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_3y5k6")

[node name="ExternalSplitStackUI" type="PanelContainer" parent="HBoxContainer/ExternalItemContextUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xywkj")
script = ExtResource("6_hiijg")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SplitSlider" type="HSlider" parent="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="SplitQty" type="Label" parent="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X/XX"
horizontal_alignment = 1

[node name="SplitButton" type="Button" parent="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Split"

[connection signal="mouse_entered" from="HBoxContainer/ExternalItemContextUI" to="HBoxContainer/ExternalItemContextUI" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ExternalItemContextUI" to="HBoxContainer/ExternalItemContextUI" method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/TrashButton" to="HBoxContainer/ExternalItemContextUI" method="_on_trash_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/UseButton" to="HBoxContainer/ExternalItemContextUI" method="_on_use_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExternalItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/SplitButton" to="HBoxContainer/ExternalItemContextUI" method="_on_split_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExternalItemContextUI/MarginContainer/HideDetailsButton" to="HBoxContainer/ExternalItemContextUI" method="_on_hide_details_button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI" to="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI" to="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI" method="_on_mouse_exited"]
[connection signal="value_changed" from="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer/VBoxContainer/HBoxContainer/SplitSlider" to="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI" method="_on_split_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI/MarginContainer/VBoxContainer/SplitButton" to="HBoxContainer/ExternalItemContextUI/ExternalSplitStackUI" method="_on_split_button_pressed"]
